objects/Auspraegung__c.object
<CustomObject>
    <label>Reisekosten Ausprägung</label>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Ausprägung Nummer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reisekosten Ausprägungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Zuschlag__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Zuschlag</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reisekosten_Art__c</fullName>
        <label>Reisekosten Art</label>
        <referenceTo>Reisekosten_Art__c</referenceTo>
        <relationshipName>Auspraegungen</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Anzahl_Sonstiges__c</fullName>
        <label>Anzahl Sonstiges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anzahl_Flug_Tickets__c</fullName>
        <label>Anzahl Flug-Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuschlag_arbeitstaeglich__c</fullName>
        <label>Zuschlag arbeitstäglich</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PNV_Heimfahrten_pro_Monat__c</fullName>
        <label>ÖPNV Heimfahrten pro Monat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuschlag_kalendertaeglich__c</fullName>
        <label>Zuschlag kalendertäglich</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bahn_Heimfahrten_pro_Monat__c</fullName>
        <label>Bahn Heimfahrten pro Monat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maximaler_Betrag_Sonstiges__c</fullName>
        <label>maximaler Betrag Sonstiges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>maximaler_Betrag_Flugticket__c</fullName>
        <label>maximaler Betrag Flugticket</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auspraegung_Unterkunft_Klinik__c</fullName>
        <label>Ausprägung Unterkunft Klinik</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>kalendertäglich</fullName>
                </value>
                <value>
                    <fullName>arbeitstäglich</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>krankheitsbedingte_Auspraegung__c</fullName>
        <label>krankheitsbedingte Ausprägung</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fruehstueck_bis_maximaler_Betrag__c</fullName>
        <label>Frühstück bis maximaler Betrag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>maximaler_Betrag_arbeitstaeglich__c</fullName>
        <label>maximaler Betrag arbeitstäglich</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>maximaler_Betrag_kalendert_glich__c</fullName>
        <label>maximaler Betrag kalendertäglich</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auspraegung_Fahrkosten_Mobilitaet__c</fullName>
        <label>Ausprägung Fahrkosten und Mobilität</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>wöchentlich</fullName>
                </value>
                <value>
                    <fullName>arbeitstäglich</fullName>
                </value>
                <value>
                    <fullName>An- und Abfahrt pro Monat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auspraegung_Mitarbeiter_Unterkunft__c</fullName>
        <label>Ausprägung Mitarbeiter Unterkunft</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Übernachtung</fullName>
                </value>
                <value>
                    <fullName>Frühstück</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KM_Pauschale_Heimfahrten_pro_Monat__c</fullName>
        <label>KM-Pauschale Heimfahrten pro Monat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uebernachtung_bis_maximaler_Betrag__c</fullName>
        <label>Übernachtung bis maximaler Betrag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>maximaler_Betrag_Reisekostenrechts__c</fullName>
        <label>maximaler Betrag (Reisekostenrechts)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Einmalpauschale_bis_maximaler_Betrag__c</fullName>
        <label>Einmalpauschale bis maximaler Betrag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>maximaler_Betrag_krankheitsb_Ausfall__c</fullName>
        <label>maximaler Betrag krankheitsb. Ausfall</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auspraegung_Fahrkosten_und_Mobilitaet_B__c</fullName>
        <label>Ausprägung Fahrkosten und Mobilität Bahn</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>An- und Abreise Auftrag</fullName>
                </value>
                <value>
                    <fullName>arbeitstäglich</fullName>
                </value>
                <value>
                    <fullName>Heimfahrten pro Monat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auspraegung_Fahrkosten_und_Mobilitaet_O__c</fullName>
        <label>Ausprägung Fahrkosten und Mobilität ÖPNV</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>An- und Abreise Auftrag</fullName>
                </value>
                <value>
                    <fullName>arbeitstäglich</fullName>
                </value>
                <value>
                    <fullName>Heimfahrten pro Monat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>